add agent details page endpoints
fix commnets
